add fixes for max points in grader